*****************************************************************************************************
digiKam 5.3.0 - Release date: 2016-10-30

NEW FEATURES:



BUGFIXES FROM BUGZILLA:

001 ==> 368965 - Crash when clicking on Table button in top menu bar [patch].
002 ==> 366769 - Rename aborts after first rename of many.
003 ==> 369140 - Tags don't appear at all.
004 ==> 329060 - digiKam Tabs in Scanning faces dialog need to be fixed.
005 ==> 369407 - Remove <para><interface> and </para></interface> from tooltip.
006 ==> 369321 - Translation of digikam + showfoto docbooks missing in digikam-5.2.0 tarball.
007 ==> 369517 - digiKam from 5.2.0 tarball installs libvkontakte translations even if libvkontakte is disabled.
008 ==> 