@@ -14,4 +14,5 @@ BUGFIXES FROM BUGZILLA:
 005 ==> 369407 - Remove <para><interface> and </para></interface> from tooltip.
 006 ==> 369321 - Translation of digikam + showfoto docbooks missing in digikam-5.2.0 tarball.
 007 ==> 369517 - digiKam from 5.2.0 tarball installs libvkontakte translations even if libvkontakte is disabled.
-008 ==> 
+008 ==> 369626 - "Subjects" metadata fields cannot be edited once other metadata are filled in and stored.
+009 ==> 
